action section added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,20 @@
         <button class="btn">Stay Focused</button>
     </div>
 
+    
+<div class="action-box">
+    <div class="action-section">
+        <div class="action-left">
+            <h2>See It in Action</h2>
+            <p>Experience the features live in your browser</p>
+            <button class="btn">Launch Live Preview</button>
+        </div>
+        <div class="action-right">
+            <img src="Images/wc-mini.png" alt="Action Image">
+        </div>
+    </div>
+</div>
+
+
 </body>
 </html>
