productive users section added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <button class="btn">Stay Focused</button>
     </div>
 
-    
-<div class="action-box">
+    <div class="action-box">
     <div class="action-section">
         <div class="action-left">
             <h2>See It in Action</h2>
@@ -33,6 +32,26 @@
         </div>
     </div>
 </div>
+
+<!-- Productive Users Section -->
+<div class="users-box">
+  <h2>Joined Thousands of Productive Users</h2>
+  <div class="stats-row">
+    <div class="stat-card">
+      <h3>1M+</h3>
+      <p>Active Users</p>
+    </div>
+    <div class="stat-card">
+      <h3>5K+</h3>
+      <p>Positive Reviews</p>
+    </div>
+    <div class="stat-card">
+      <h3>Top Rated</h3>
+      <p>By Developers</p>
+    </div>
+  </div>
+</div>
+
 
 
 </body>
