--- a/index.html
+++ b/index.html
@@ -52,6 +52,67 @@
   </div>
 </div>
 
+<div class="testimonial-wrapper">
+  <div class="testimonial-box">
+    <h2>What our users say</h2>
+    <div class="testimonial-row">
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Images/icon-star.png" alt="star">
+          <img src="Images/icon-star.png" alt="star">
+          <img src="Images/icon-star.png" alt="star">
+          <img src="Images/icon-star.png" alt="star">
+          <img src="Images/icon-star.png" alt="star">
+        </div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence. — Studio Vertex</p>
+        <div class="review-footer">
+          <img src="Images/avatar.png" alt="avatar">
+          <div>
+            <h4>Reviewer name</h4>
+            <small>Date</small>
+          </div>
+        </div>
+      </div>
+
+<div class="testimonial-card">
+    <div class="stars">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+    </div>
+    <h3>Loved by Designers</h3>
+    <p>This template instantly leveled up our presence. — Studio Vertex</p>
+    <div class="review-footer">
+      <img src="Images/avatar.png" alt="avatar">
+      <div>
+        <h4>Reviewer name</h4>
+        <small>Date</small>
+      </div>
+    </div>
+  </div>
+
+  <div class="testimonial-card">
+    <div class="stars">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+      <img src="Images/icon-star.png" alt="star">
+    </div>
+    <h3>Loved by Designers</h3>
+    <p>This template instantly leveled up our presence. — Studio Vertex</p>
+    <div class="review-footer">
+      <img src="Images/avatar.png" alt="avatar">
+      <div>
+        <h4>Reviewer name</h4>
+        <small>Date</small>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 </body>
