Added foucs section with call to action and banner

--- a/index.html
+++ b/index.html
@@ -52,67 +52,75 @@
   </div>
 </div>
 
-<div class="testimonial-wrapper">
-  <div class="testimonial-box">
-    <h2>What our users say</h2>
-    <div class="testimonial-row">
-      <div class="testimonial-card">
-        <div class="stars">
-          <img src="Images/icon-star.png" alt="star">
-          <img src="Images/icon-star.png" alt="star">
-          <img src="Images/icon-star.png" alt="star">
-          <img src="Images/icon-star.png" alt="star">
-          <img src="Images/icon-star.png" alt="star">
+<div class="standard-box">
+  <h2>What our users say</h2>
+  <div class="testimonial-row">
+    <div class="testimonial-card">
+      <div class="stars">
+        <img src="Images/icon-star.png" alt="Star">
+        <img src="Images/icon-star.png" alt="Star">
+        <img src="Images/icon-star.png" alt="Star">
+        <img src="Images/icon-star.png" alt="Star">
+        <img src="Images/icon-star.png" alt="Star">
+      </div>
+      <h3>Loved by Designers</h3>
+      <p>This template instantly leveled up our presence. – Studio Vertex</p>
+      <div class="review-footer">
+        <img src="Images/avatar.png" alt="Reviewer">
+        <div>
+          <h4>Reviewer name</h4>
+          <small>Date</small>
         </div>
-        <h3>Loved by Designers</h3>
-        <p>This template instantly leveled up our presence. — Studio Vertex</p>
-        <div class="review-footer">
-          <img src="Images/avatar.png" alt="avatar">
-          <div>
-            <h4>Reviewer name</h4>
-            <small>Date</small>
-          </div>
-        </div>
-      </div>
+      </div>
+    </div>
 
 <div class="testimonial-card">
-    <div class="stars">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-    </div>
-    <h3>Loved by Designers</h3>
-    <p>This template instantly leveled up our presence. — Studio Vertex</p>
-    <div class="review-footer">
-      <img src="Images/avatar.png" alt="avatar">
-      <div>
-        <h4>Reviewer name</h4>
-        <small>Date</small>
-      </div>
+  <div class="stars">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+  </div>
+  <h3>Loved by Designers</h3>
+  <p>This template instantly leveled up our presence. – Studio Vertex</p>
+  <div class="review-footer">
+    <img src="Images/avatar.png" alt="Reviewer">
+    <div>
+      <h4>Reviewer name</h4>
+      <small>Date</small>
     </div>
   </div>
+</div>
 
-  <div class="testimonial-card">
-    <div class="stars">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-      <img src="Images/icon-star.png" alt="star">
-    </div>
-    <h3>Loved by Designers</h3>
-    <p>This template instantly leveled up our presence. — Studio Vertex</p>
-    <div class="review-footer">
-      <img src="Images/avatar.png" alt="avatar">
-      <div>
-        <h4>Reviewer name</h4>
-        <small>Date</small>
-      </div>
+<div class="testimonial-card">
+  <div class="stars">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+    <img src="Images/icon-star.png" alt="Star">
+  </div>
+  <h3>Loved by Designers</h3>
+  <p>This template instantly leveled up our presence. – Studio Vertex</p>
+  <div class="review-footer">
+    <img src="Images/avatar.png" alt="Reviewer">
+    <div>
+      <h4>Reviewer name</h4>
+      <small>Date</small>
     </div>
   </div>
 </div>
+
+<div class="standard-box">
+  <h2>Ready to focus better</h2>
+  <p class="focus-subtitle">This template instantly leveled up our presence. – Studio Vertex</p>
+  <a href="#" class="focus-btn">Get Started Free</a>
+  <div class="focus-image">
+    <img src="Images/wc-big.png" alt="Webflow Conference">
+  </div>
+</div>
+
 
 
 </body>
