Let's get in touch section added

--- a/index.html
+++ b/index.html
@@ -1,127 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Web Developer Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="logo">NAFI</div>
-        <button class="btn">Sign Up</button>
-    </div>
 
-    <!-- Banner -->
-    <div class="banner">
-        <h1>Cool Dark UI Template for WebDev Agencies!</h1>
-        <button class="btn">Stay Focused</button>
-    </div>
+  <!-- Navbar -->
+  <div class="navbar">
+    <div class="logo">Apurbo</div>
+    <button class="btn">Sign Up</button>
+  </div>
 
-    <div class="action-box">
+  <!-- Banner -->
+  <div class="banner">
+    <h1>Cool Dark UI Template for WebDev Agencies!</h1>
+    <button class="btn">Stay Focused</button>
+  </div>
+
+  <!-- See It in Action -->
+  <div class="action-box">
     <div class="action-section">
-        <div class="action-left">
-            <h2>See It in Action</h2>
-            <p>Experience the features live in your browser</p>
-            <button class="btn">Launch Live Preview</button>
-        </div>
-        <div class="action-right">
-            <img src="Images/wc-mini.png" alt="Action Image">
-        </div>
-    </div>
-</div>
-
-<!-- Productive Users Section -->
-<div class="users-box">
-  <h2>Joined Thousands of Productive Users</h2>
-  <div class="stats-row">
-    <div class="stat-card">
-      <h3>1M+</h3>
-      <p>Active Users</p>
-    </div>
-    <div class="stat-card">
-      <h3>5K+</h3>
-      <p>Positive Reviews</p>
-    </div>
-    <div class="stat-card">
-      <h3>Top Rated</h3>
-      <p>By Developers</p>
-    </div>
-  </div>
-</div>
-
-<div class="standard-box">
-  <h2>What our users say</h2>
-  <div class="testimonial-row">
-    <div class="testimonial-card">
-      <div class="stars">
-        <img src="Images/icon-star.png" alt="Star">
-        <img src="Images/icon-star.png" alt="Star">
-        <img src="Images/icon-star.png" alt="Star">
-        <img src="Images/icon-star.png" alt="Star">
-        <img src="Images/icon-star.png" alt="Star">
+      <div class="action-left">
+        <h2>See It in Action</h2>
+        <p>Experience the features live in your browser</p>
+        <button class="btn">Launch Live Preview</button>
       </div>
-      <h3>Loved by Designers</h3>
-      <p>This template instantly leveled up our presence. – Studio Vertex</p>
-      <div class="review-footer">
-        <img src="Images/avatar.png" alt="Reviewer">
-        <div>
-          <h4>Reviewer name</h4>
-          <small>Date</small>
-        </div>
+      <div class="action-right">
+        <img src="Images/wc-mini.png" alt="Action Image"/>
       </div>
-    </div>
-
-<div class="testimonial-card">
-  <div class="stars">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-  </div>
-  <h3>Loved by Designers</h3>
-  <p>This template instantly leveled up our presence. – Studio Vertex</p>
-  <div class="review-footer">
-    <img src="Images/avatar.png" alt="Reviewer">
-    <div>
-      <h4>Reviewer name</h4>
-      <small>Date</small>
     </div>
   </div>
-</div>
 
-<div class="testimonial-card">
-  <div class="stars">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
-    <img src="Images/icon-star.png" alt="Star">
+  <!-- Productive Users Section -->
+  <div class="users-box">
+    <h2>Joined Thousands of Productive Users</h2>
+    <div class="stats-row">
+      <div class="stat-card">
+        <h3>1M+</h3>
+        <p>Active Users</p>
+      </div>
+      <div class="stat-card">
+        <h3>5K+</h3>
+        <p>Positive Reviews</p>
+      </div>
+      <div class="stat-card">
+        <h3>Top Rated</h3>
+        <p>By Developers</p>
+      </div>
+    </div>
   </div>
-  <h3>Loved by Designers</h3>
-  <p>This template instantly leveled up our presence. – Studio Vertex</p>
-  <div class="review-footer">
-    <img src="Images/avatar.png" alt="Reviewer">
-    <div>
-      <h4>Reviewer name</h4>
-      <small>Date</small>
+
+  <!-- Testimonials -->
+  <div class="standard-box">
+    <h2>What our users say</h2>
+    <div class="testimonial-row">
+
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+        </div>
+        <h3>Loved by Designers</h3>
+        <p>This template instantly leveled up our presence. – Studio Vertex</p>
+        <div class="review-footer">
+          <img src="Images/avatar.png" alt="Reviewer"/>
+          <div>
+            <h4>Reviewer name</h4>
+            <small>Date</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+        </div>
+        <h3>Impressive Quality</h3>
+        <p>The UI is so intuitive, even non-tech people loved it! – CodeHaus</p>
+        <div class="review-footer">
+          <img src="Images/avatar.png" alt="Reviewer"/>
+          <div>
+            <h4>Reviewer name</h4>
+            <small>Date</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="testimonial-card">
+        <div class="stars">
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+          <img src="Images/icon-star.png" alt="Star"/>
+        </div>
+        <h3>Highly Recommended</h3>
+        <p>Saved us time and money. Worth every penny! – DevForge</p>
+        <div class="review-footer">
+          <img src="Images/avatar.png" alt="Reviewer"/>
+          <div>
+            <h4>Reviewer name</h4>
+            <small>Date</small>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Ready to Focus Section -->
+  <div class="standard-box">
+    <h2>Ready to focus better</h2>
+    <p class="focus-subtitle">This template instantly leveled up our presence. – Studio Vertex</p>
+    <a href="#" class="focus-btn">Get Started Free</a>
+    <div class="focus-image">
+      <img src="Images/wc-big.png" alt="Webflow Conference"/>
+    </div>
+  </div>
+
+  <!-- Contact Section -->
+  <div class="standard-box contact-box">
+  <div class="contact-wrapper">
+    <!-- Left: Text -->
+    <div class="contact-left">
+      <h2>Let’s Get in Touch</h2>
+      <p class="contact-subtitle">
+        We’d love to hear from you! Send us a message and we’ll respond as soon as possible.
+      </p>
+    </div>
+
+    <!-- Right: Form -->
+    <div class="contact-right">
+      <form class="contact-form">
+        <input type="text" placeholder="Your Name" required />
+        <input type="email" placeholder="Your Email" required />
+        <textarea placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </div>
   </div>
 </div>
-
-<div class="standard-box">
-  <h2>Ready to focus better</h2>
-  <p class="focus-subtitle">This template instantly leveled up our presence. – Studio Vertex</p>
-  <a href="#" class="focus-btn">Get Started Free</a>
-  <div class="focus-image">
-    <img src="Images/wc-big.png" alt="Webflow Conference">
-  </div>
-</div>
-
-
 
 </body>
 </html>
