--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     <div class="logo">Apurbo</div>
     <button class="btn">Sign Up</button>
   </div>
-
-  <!-- Banner -->
   <div class="banner">
     <h1>Cool Dark UI Template for WebDev Agencies!</h1>
     <button class="btn">Stay Focused</button>
   </div>
 
-  <!-- See It in Action -->
+  <!--  Action -->
   <div class="action-box">
     <div class="action-section">
       <div class="action-left">
@@ -34,7 +32,7 @@
     </div>
   </div>
 
-  <!-- Productive Users Section -->
+  <!-- Users Section -->
   <div class="users-box">
     <h2>Joined Thousands of Productive Users</h2>
     <div class="stats-row">
@@ -118,7 +116,7 @@
     </div>
   </div>
 
-  <!-- Ready to Focus Section -->
+  <!-- Focus Section -->
   <div class="standard-box">
     <h2>Ready to focus better</h2>
     <p class="focus-subtitle">This template instantly leveled up our presence. – Studio Vertex</p>
@@ -131,15 +129,13 @@
   <!-- Contact Section -->
   <div class="standard-box contact-box">
   <div class="contact-wrapper">
-    <!-- Left: Text -->
+ 
     <div class="contact-left">
       <h2>Let’s Get in Touch</h2>
       <p class="contact-subtitle">
         We’d love to hear from you! Send us a message and we’ll respond as soon as possible.
       </p>
     </div>
-
-    <!-- Right: Form -->
     <div class="contact-right">
       <form class="contact-form">
         <input type="text" placeholder="Your Name" required />
@@ -150,6 +146,21 @@
     </div>
   </div>
 </div>
+
+
+<!-- Footer Section -->
+<footer class="footer">
+  <div class="footer-content">
+    <h2 class="footer-logo">LOGO</h2>
+    <p class="footer-subtitle">Building modern web experiences for everyone</p>
+    <div class="footer-links">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">How it works</a>
+      <a href="#">Services</a>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
